tests/snapshots/lexer_snapshots__lexer_all@tokens-120.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/13_iterators/iterator_interface.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Iterator",
            ),
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: LT,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: GT,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: LeftBrace,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "next",
            ),
            position: 30,
            line: 2,
            column: 7,
        },
        Token {
            token_type: LeftParen,
            position: 31,
            line: 2,
            column: 8,
        },
        Token {
            token_type: SelfRef,
            position: 35,
            line: 2,
            column: 12,
        },
        Token {
            token_type: RightParen,
            position: 36,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 37,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 39,
            line: 2,
            column: 16,
        },
        Token {
            token_type: Pipe,
            position: 41,
            line: 2,
            column: 18,
        },
        Token {
            token_type: Null,
            position: 46,
            line: 2,
            column: 23,
        },
        Token {
            token_type: Comma,
            position: 47,
            line: 2,
            column: 24,
        },
        Token {
            token_type: RightBrace,
            position: 49,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 59,
            line: 5,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print_all",
            ),
            position: 69,
            line: 5,
            column: 19,
        },
        Token {
            token_type: LT,
            position: 70,
            line: 5,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 71,
            line: 5,
            column: 21,
        },
        Token {
            token_type: GT,
            position: 72,
            line: 5,
            column: 22,
        },
        Token {
            token_type: LeftParen,
            position: 73,
            line: 5,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "iter",
            ),
            position: 77,
            line: 5,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 78,
            line: 5,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "Iterator",
            ),
            position: 87,
            line: 5,
            column: 37,
        },
        Token {
            token_type: LT,
            position: 88,
            line: 5,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 89,
            line: 5,
            column: 39,
        },
        Token {
            token_type: GT,
            position: 90,
            line: 5,
            column: 40,
        },
        Token {
            token_type: RightParen,
            position: 91,
            line: 5,
            column: 41,
        },
        Token {
            token_type: LeftBrace,
            position: 93,
            line: 5,
            column: 43,
        },
        Token {
            token_type: For,
            position: 99,
            line: 6,
            column: 6,
        },
        Token {
            token_type: LeftParen,
            position: 101,
            line: 6,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "item",
            ),
            position: 105,
            line: 6,
            column: 12,
        },
        Token {
            token_type: In,
            position: 108,
            line: 6,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "iter",
            ),
            position: 113,
            line: 6,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 114,
            line: 6,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 116,
            line: 6,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 126,
            line: 7,
            column: 10,
        },
        Token {
            token_type: LeftParen,
            position: 127,
            line: 7,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "item",
            ),
            position: 131,
            line: 7,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 132,
            line: 7,
            column: 16,
        },
        Token {
            token_type: Semicolon,
            position: 133,
            line: 7,
            column: 17,
        },
        Token {
            token_type: RightBrace,
            position: 137,
            line: 8,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 139,
            line: 9,
            column: 2,
        },
    ],
)
