tests/snapshots/lexer_snapshots__lexer_all@tokens-122.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/14_ffi/extern_fn_type.of
---
Ok(
    [
        Token {
            token_type: Type,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "Fun",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Eq,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Extern,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: Colon,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "MyStruct",
            ),
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: FatArrow,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 39,
            line: 1,
            column: 40,
        },
        Token {
            token_type: Semicolon,
            position: 40,
            line: 1,
            column: 41,
        },
        Token {
            token_type: Type,
            position: 45,
            line: 2,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "Callback",
            ),
            position: 54,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Eq,
            position: 56,
            line: 2,
            column: 16,
        },
        Token {
            token_type: Extern,
            position: 63,
            line: 2,
            column: 23,
        },
        Token {
            token_type: LeftParen,
            position: 65,
            line: 2,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "data",
            ),
            position: 69,
            line: 2,
            column: 29,
        },
        Token {
            token_type: Colon,
            position: 70,
            line: 2,
            column: 30,
        },
        Token {
            token_type: Star,
            position: 72,
            line: 2,
            column: 32,
        },
        Token {
            token_type: Identifier(
                "MyStruct",
            ),
            position: 80,
            line: 2,
            column: 40,
        },
        Token {
            token_type: Comma,
            position: 81,
            line: 2,
            column: 41,
        },
        Token {
            token_type: Identifier(
                "size",
            ),
            position: 86,
            line: 2,
            column: 46,
        },
        Token {
            token_type: Colon,
            position: 87,
            line: 2,
            column: 47,
        },
        Token {
            token_type: Identifier(
                "u64",
            ),
            position: 91,
            line: 2,
            column: 51,
        },
        Token {
            token_type: RightParen,
            position: 92,
            line: 2,
            column: 52,
        },
        Token {
            token_type: FatArrow,
            position: 95,
            line: 2,
            column: 55,
        },
        Token {
            token_type: Star,
            position: 97,
            line: 2,
            column: 57,
        },
        Token {
            token_type: Identifier(
                "Buffer",
            ),
            position: 103,
            line: 2,
            column: 63,
        },
        Token {
            token_type: Pipe,
            position: 105,
            line: 2,
            column: 65,
        },
        Token {
            token_type: Null,
            position: 110,
            line: 2,
            column: 70,
        },
        Token {
            token_type: Semicolon,
            position: 111,
            line: 2,
            column: 71,
        },
    ],
)
