tests/snapshots/lexer_snapshots__lexer_all@tokens-124.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/14_ffi/extern_struct.of
---
Ok(
    [
        Token {
            token_type: Extern,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Struct,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "MyCFunctionArgs",
            ),
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: LeftBrace,
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Identifier(
                "flags",
            ),
            position: 39,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 40,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 44,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Comma,
            position: 45,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 52,
            line: 3,
            column: 7,
        },
        Token {
            token_type: Colon,
            position: 53,
            line: 3,
            column: 8,
        },
        Token {
            token_type: Star,
            position: 55,
            line: 3,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 58,
            line: 3,
            column: 13,
        },
        Token {
            token_type: Comma,
            position: 59,
            line: 3,
            column: 14,
        },
        Token {
            token_type: RightBrace,
            position: 61,
            line: 4,
            column: 2,
        },
    ],
)
