tests/snapshots/lexer_snapshots__lexer_all@tokens-125.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/14_ffi/extern_function_export.of
---
Ok(
    [
        Token {
            token_type: Extern,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Function,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "on_tick",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "d",
            ),
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Colon,
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Star,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "MyStruct",
            ),
            position: 36,
            line: 1,
            column: 37,
        },
        Token {
            token_type: RightParen,
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: LeftBrace,
            position: 39,
            line: 1,
            column: 40,
        },
        Token {
            token_type: Identifier(
                "d",
            ),
            position: 43,
            line: 2,
            column: 4,
        },
        Token {
            token_type: Dot,
            position: 44,
            line: 2,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "counter",
            ),
            position: 51,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Eq,
            position: 53,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "d",
            ),
            position: 55,
            line: 2,
            column: 16,
        },
        Token {
            token_type: Dot,
            position: 56,
            line: 2,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "counter",
            ),
            position: 63,
            line: 2,
            column: 24,
        },
        Token {
            token_type: Plus,
            position: 65,
            line: 2,
            column: 26,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 67,
            line: 2,
            column: 28,
        },
        Token {
            token_type: RightBrace,
            position: 69,
            line: 3,
            column: 2,
        },
    ],
)
