tests/snapshots/lexer_snapshots__lexer_all@tokens-129.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p1_function_skeleton_inserted.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "foo",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: RightParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: RightBrace,
            position: 17,
            line: 1,
            column: 18,
        },
    ],
)
